<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/prefs_mes_parametres">
        <EditTextPreference
            android:defaultValue="@string/prefs_non_renseigne"
            android:key="prefs_nom_joueur"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:useSimpleSummaryProvider="true"
        android:title="@string/prefs_nom_joueur" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefs_theme"
            android:title="@string/prefs_theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_mes_scores">
        <EditTextPreference
            android:defaultValue="@string/prefs_non_renseigne"
            android:key="prefs_bataille_score"
            android:selectable="false"
            app:useSimpleSummaryProvider="true"
            android:title="@string/menu_bataille" />
        <EditTextPreference
            android:defaultValue="@string/prefs_non_renseigne"
            android:key="prefs_compter_score"
            android:selectable="false"
            app:useSimpleSummaryProvider="true"
            android:title="@string/menu_compter" />
    </PreferenceCategory>
</PreferenceScreen>
